# arxpm

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  404.html  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  index.html  mkdocs.yaml  pyproject.toml
.github/workflows/: docs.yaml  main.yaml  release.yaml
changelog/: index.html
commands/: index.html
conda/: dev.yaml  release.yaml
contributing/: index.html
docs/: changelog.md  commands.md  contributing.md  environments.md  getting-started.md  index.md  local-packages.md  manifest.md  multi-file-projects.md  pixi-integration.md
environments/: index.html
examples/: arxproj.toml  pixi.toml
examples/hello-arx/: .arxproject.toml  pixi.toml
examples/local-consumer/: .arxproject.toml  .gitignore  pixi.toml
examples/local-consumer/src/local_consumer/: main.x
examples/local_lib/: .arxproject.toml  pixi.toml
examples/local_lib/src/: local_lib.x
examples/local_lib/src/local_lib/: __init__.x  stats.x
examples/multi-module/: .arxproject.toml  pixi.toml
examples/multi-module/src/: string_utils.x
examples/multi-module/src/multi_module/: __init__.x  main.x  math_utils.x
examples/src/: main.arx  main.x
getting-started/: index.html
local-packages/: index.html
manifest/: index.html
multi-file-projects/: index.html
pixi-integration/: index.html
search/: search_index.json
src/arxpm/: __init__.py  __main__.py  _toml.py  cli.py  credentials.py  doctor.py  environment.py  errors.py  external.py  healthcheck.py  layout.py  manifest.py  models.py  pixi.py  project.py
tests/: conftest.py  test_cli.py  test_credentials.py  test_doctor.py  test_environment.py  test_examples.py  test_examples_integration.py  test_external.py  test_healthcheck.py  test_main.py  test_manifest.py  test_models.py  test_pixi.py  test_project.py
