[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "arxpm"
version = "0.1.0"
description = "Project and package manager for Arx workspaces"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Ogasawara" }]
dependencies = ["typer>=0.12.3,<1.0.0"]

[project.scripts]
arxpm = "arxpm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/arxpm"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src"]
