[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "arxpm"
version = "1.8.1"  # semantic-release
description = "Project and package manager for Arx workspaces"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Ogasawara" }]
dependencies = [
    "typer>=0.12.3,<1.0.0",
    "arxlang >= 1.23.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "twine>=6.2.0",
    "build>=1.2.0",
    "uv>=0.5.0",
    "keyring>=25.0.0",
]

[project.scripts]
arxpm = "arxpm.cli:app"

[tool.poetry]
packages = [{include = "arxpm", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.2"
pytest-cov = ">=4.1.0"
coverage = ">=7.2.7"
pre-commit = ">=3.3.2"
ruff = ">=0.1.5"
mypy = ">=1.5.0"
bandit = ">=1.7.5"
vulture = ">=2.9.1"
mccabe = ">=0.6.1"
ipython = ">=7"
ipykernel = ">=6.0.0"
mkdocs = ">=1.3,<2"
mkdocs-exclude = ">=1.0.2"
mkdocs-jupyter = ">=0.24.7"
mkdocs-literate-nav = ">=0.4.1"
mkdocs-macros-plugin = ">=0.6.3"
mkdocs-material = ">=8"
mkdocstrings = { version = ">=0.19.0", extras = ["python"] }
mkdocstrings-python = "<2"
mkdocs-gen-files = ">=0.5.0"
makim = "1.27.0"
jupyterlab = ">=4.0.7"
nbmake = ">=1.5.3"
douki = "<0.12.0"

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that require arx and uv on PATH",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src"]
exclude = [
    "^pytest-.*",
]
